  startup time.
- Multiple fixes to verify pyasn1 decoder.decode() return to withstand
  broken SNMP messages or its components.
- First attempt made to make some of SNMP Engine settings persistent
  across reboots.
- Make config.delTransport() returning detached transport object. Asyncio
  examples now use this facility to explicitly shutdown transport object.
- Fix to authoritative engine side snmpEngineID discovery procedure: 
  respond with notInTimeWindows rather then with unsupportedSecurityLevel
  at time synchronization phase.
- Fix to rfc1902.Bits type to make it accepting hex and binary initializers,
  cope with missing bits identifieirs at prettyPrint().
- Memory leak fixed in CommandForwarder examples.
- Fix to BULK CommandGenerator to use the same nonRepeaters OIDs across
  multiple GETBULK iterations so returned table for nonRepeaters columns 
  would hold the same var-bind.
- Fix to CommandGenerator to make sendRequestHandle persistent across
  multiple iterations of GETNEXT/GETBULK queries.
- Fix to sendNotification() error handling at NotificationOriginator.
- Fix to preserve possible 'fixed length' setting atrfc1902.OctetString
  on clone()'ing and subtype()'ing.
- Fix to rfc1902.OctetString & Bits to base them on OctetString class to
  make the 'fixed length' property working.
- Fix to .clone() method of rfc1902.Bits class to make its signature
  matching the rest of classes. This may broke code which used to pass
  namedValue parameter positionally rather than binding it by name.
- Fix to PDU translation service (proto.proxy.rfc2576) to make it
  initializing errorIndex & errorStatus components of the resulting PDU.
- Fix to MsgAndPduDispatcher.sendPdu() to clean up request queue on 
  pysnmp-level processing failure.
- Fix to SNMPv1/v2c message processing subsystem to make it serving
  unique PDU request-id's in both outgoing and incoming confirmed 
  and response PDU types. Duplicate request-id's in unrelated PDUs may